--- a/GSAP-Bonus/index.html
+++ b/GSAP-Bonus/index.html
@@ -7,8 +7,10 @@
     <title>package</title>
   </head>
   <body>
-
-    
+    <div class="background1"></div>
+    <div class="background2"></div>
+    <div class="background3"></div>
+    <div class="background4"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
