terminé la partie texte de l'animation

--- a/GSAP-Bonus/index.html
+++ b/GSAP-Bonus/index.html
@@ -7,6 +7,8 @@
     <title>package</title>
   </head>
   <body>
+    <h1 class="text">Allo :D</h1>
+
     <div class="background1"></div>
     <div class="background2"></div>
     <div class="background3"></div>
